# comprs

./: .gitignore  Cargo.toml  README.md
.cargo/: config  config.toml
dsp/: Cargo.toml
dsp/src/: lib.rs
gui/: bun.lockb  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
gui/app/: globals.css  layout.tsx  page.tsx
gui/bindings/: Action.ts  Amplitude.ts  Messages.ts  Parameter.ts  ParameterEvent.ts  PluginMessage.ts
gui/components/: Amplitude.tsx  AudioGraph.tsx  GRMeter.tsx  KnobBase.tsx  KnobBaseThumb.tsx
gui/components/knobs/: DBKnob.tsx  DryWetKnob.tsx  GenericKnob.tsx  KneeKnob.tsx  KnobBase.tsx  RatioKnob.tsx  ThresholdKnob.tsx  TimeKnob.tsx
gui/components/knobs/generic/: DBKnob.tsx  PercentKnob.tsx  TimeKnob.tsx
gui/components/ui/: slider.tsx
gui/hooks/: index.ts
gui/lib/: index.ts  utils.ts
plot/: Cargo.toml
plot/src/: main.rs
src/: dsp.rs  editor.rs  enums.rs  lib.rs  main.rs  params.rs  plot.rs
