[package]
name = "comprs"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# The `lib` artifact is needed for the standalone target
crate-type = ["cdylib"]

[dependencies]
# I normally 
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
atomic_float = "0.1"
plotters = "0.3.5"
rand = "0.8.5"
ts-rs = "9.0.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
nih_plug_webview = { git = "https://github.com/dvub/nih-plug-webview.git" }

[workspace]
members = ["plot", "xtask"]
